<resources>
    <string name="app_name">Tri9i test</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="msg_cherif_hani_sal">CHERIF Hani Salah Eddine</string>
    <string name="msg_you_will_delete">you will delete your account
permanently </string>
    <string name="msg_list_des_passag">List des passages</string>
    <string name="lbl_logout">Logout</string>
    <string name="msg_forget_password">Forget password ?</string>
    <string name="lbl_user_name">user Name</string>
    <string name="lbl_phone_number2">phone number</string>
    <string name="lbl_participer">Participer </string>
    <string name="msg_confirm_passwor">Confirm Password</string>
    <string name="lbl_take_a_place">take a place</string>
    <string name="lbl_9_2739_92">9 - 2739 - 92</string>
    <string name="lbl_update_password">update password</string>
    <string name="lbl_create_trajet">Create trajet</string>
    <string name="msg_detail_of_traje">Detail of trajet</string>
    <string name="msg_hanisalaheddine">hanisalaheddine.cherif@gmail.com</string>
    <string name="lbl_phone_number">Phone number : </string>
    <string name="lbl_finish">Finish</string>
    <string name="lbl_cherif_hani">CHERIF Hani</string>
    <string name="lbl_password2">password : </string>
    <string name="lbl_4_9">4.9</string>
    <string name="lbl_resset_password2">Resset password</string>
    <string name="msg_choose_pick_up">Choose pick up point</string>
    <string name="lbl_select_a_car">Select a car</string>
    <string name="lbl_sign_in">SIGN IN</string>
    <string name="lbl_create">Create</string>
    <string name="lbl_sign_up">Sign Up </string>
    <string name="lbl_man">man</string>
    <string name="lbl_cheraga">Cheraga</string>
    <string name="lbl_sign_up2">Sign up</string>
    <string name="lbl_change">CHANGE</string>
    <string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </string>
    <string name="lbl_places">Places</string>
    <string name="lbl_name">Name : </string>
    <string name="msg_login_with_e_ma">Login with E-mail</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl">**************</string>
    <string name="lbl_gender2">Gender</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="lbl_resset_password">Resset Password</string>
    <string name="lbl_add_car">Main Menu</string>
    <string name="lbl_haany">Haany</string>
    <string name="msg_choose_your_des">Choose your destination</string>
    <string name="lbl_email">email</string>
    <string name="msg_find_a_best_pr">Find a best
Price</string>
    <string name="msg_hani_cherif_yas">hani.cherif@yassir.com</string>
    <string name="msg_participation_a">Participation au trajet</string>
    <string name="lbl_creation_trajet">Creation trajet</string>
    <string name="lbl_8_00_am">8:00 AM</string>
    <string name="lbl_gender">Gender : </string>
    <string name="lbl_4">4</string>
    <string name="lbl_cherchel">Cherchel</string>
    <string name="msg_don_t_have_an_a2">"Don't have an account?"</string>
    <string name="lbl_change_picture">Change Picture</string>
    <string name="msg_number_de_place">number de places</string>
    <string name="lbl_login">LOGIN</string>
    <string name="lbl_0560670964">0560670964</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_man2">Man</string>
    <string name="lbl_update_email">update email</string>
    <string name="lbl_e_mail2">E-mail : </string>
    <string name="lbl_amine_baroud">Amine Baroud</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_marque">marque</string>
    <string name="lbl_6_30_am">6:30 AM</string>
    <string name="lbl_07_05_2023">07/05/2023</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_color">color</string>
    <string name="lbl_modele">modele</string>
    <string name="msg_enter_your_logi">Enter your login e-mail to resset your password </string>
    <string name="lbl_add_new">Add new</string>
    <string name="lbl_delete_account">Delete account</string>
    <string name="lbl_heur_de_depart">Heur de depart</string>
    <string name="lbl_matricule">Matricule</string>
    <string name="msg_where_are_you_g">Where are you going today?</string>
    <string name="lbl_0560_67_09_642">0560 67 09 64</string>
    <string name="lbl_update_profile">Update profile</string>
    <string name="lbl_bmw">BMW</string>
    <string name="lbl_full_name">Full Name</string>
    <string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
    <string name="msg_please_enter_valid_email">Please enter valid email</string>
    <string name="msg_please_enter_valid_text">Please enter valid text</string>
    <string name="msg_please_enter_valid_pa">Please enter valid password</string>
</resources>