<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:orientation="vertical">

        <LinearLayout android:id="@+id/linearColumnarrowleft"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_4"
                android:ellipsize="end"
                android:hint="@string/lbl_full_name"
                android:id="@+id/signupname"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_15pxv"
                android:singleLine="true"
                android:textColorHint="@color/black_900_82"
                style="@style/etSolidRounded_1"
                tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_4"
                android:ellipsize="end"
                android:hint="@string/lbl_user_name"
                android:id="@+id/signupusername"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_16pxv"
                android:singleLine="true"
                android:textColorHint="@color/black_900_82"
                style="@style/etSolidRounded_1"
                tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_4"
                android:ellipsize="end"
                android:hint="@string/lbl_email"
                android:id="@+id/signupmail"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_16pxv"
                android:singleLine="true"
                android:textColorHint="@color/black_900_82"
                style="@style/etSolidRounded_1"
                tools:ignore="Autofill"/>

                <TextView android:ellipsize="end"
                    android:id="@+id/txtGender"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_16pxv"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="Gender"
                    style="@style/txtPoppinsmedium14_1"
                    tools:text="@string/lbl_gender2"/>
                <RadioGroup
                    android:id="@+id/signupgender"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteX="30dp"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh">
                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/purple_500"
                    android:text="Female"
                    android:textColor="#555555"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:buttonTint="@color/purple_500"
                    android:text="Male"
                    android:textColor="#555555"
                    android:textSize="16sp" />
                </RadioGroup>

            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_4"
                android:ellipsize="end"
                android:hint="@string/lbl_phone_number2"
                android:id="@+id/signupphonenmbr"
                android:inputType="phone"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_16pxv"
                android:singleLine="true"
                android:textColorHint="@color/black_900_82"
                style="@style/etSolidRounded_1"
                tools:ignore="Autofill"/>

            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowpassword"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_12pxh"
                android:layout_marginStart="@dimen/_13pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                style="@style/groupStylewhite_A700cornerRadius">

                <LinearLayout android:id="@+id/linearColumnpassword"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_15pxv"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_weight="0.93"
                    android:layout_width="0dp"
                    android:orientation="vertical">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPassword"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="Password"
                        style="@style/txtPoppinsmedium9"
                        tools:text="@string/lbl_password"
                        android:textSize="12dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/signuppassword"
                        android:inputType="textPassword"
                        android:layout_marginEnd="20dp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowConfirmpassword"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_12pxh"
                android:layout_marginStart="@dimen/_13pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                style="@style/groupStylewhite_A700cornerRadius">
                <LinearLayout
                    android:id="@+id/linearColumnConfirmpassword"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_15pxv"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_weight="0.93"
                    android:layout_width="0dp"
                    android:orientation="vertical">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtConfirmPassword"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="Confirm Password"
                        style="@style/txtPoppinsmedium9"
                        tools:text="Confirm Password"
                        android:textSize="12dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/signupconfpassword"
                        android:inputType="textPassword"
                        android:layout_marginEnd="20dp"/>
                </LinearLayout>
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end"
                android:gravity="center"
                android:id="@+id/btnSignUp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@string/lbl_sign_up2"
                android:textAllCaps="true"
                style="@style/btnSolidRounded"
                tools:text="@string/lbl_sign_up2"/>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
