<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordactivity">
    <FrameLayout android:id="@+id/frameRessetpassword"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        style="@style/groupStylepurple_A700">
        <LinearLayout android:id="@+id/linearColumnclose"
            android:layout_gravity="top|center"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_43pxv"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtLanguage"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_23pxh"
                android:layout_marginStart="@dimen/_23pxh"
                android:layout_marginTop="@dimen/_63pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_10pxh"
                style="@style/txtPoppinsregular16"
                android:text="Enter your logine-mail to resset your password"
                />
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumn"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_43pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <LinearLayout android:id="@+id/linearColumnemail"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtEmail"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        style="@style/txtPoppinsmedium9" tools:text="@string/lbl_email"/>
                    <EditText
                        android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/edittxt_pwd_reset_email"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_15pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        style="@style/txtPoppinsmedium14"
                        tools:text="@string/msg_hanisalaheddine"/>
                </LinearLayout>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btn_pwd_reset"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_15pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_15pxv"
                android:singleLine="true"
                android:text="@string/lbl_resset_password2"
                android:textAllCaps="true"
                style="@style/btnSolidRounded_2"
                tools:text="@string/lbl_resset_password2"/>
        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
